--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.t-sql linguist-language=java
+*.sql linguist-language=java
 *.css linguist-language=java
 *.less linguist-language=java
 *.js linguist-language=java
